# HermesKanban

./: .gitignore  DESIGN.md  README.md  bootstrap.py  pyproject.toml  server.py
deploy/systemd/: hermes-kanban-webui.service
kanban_webui/: __init__.py  app.py  app_update.py  auth.py  config.py  hermes_imports.py  kanban_api.py  operations.py  serializers.py  service_status.py  ui_registry.py
scripts/: hermes-kanban-webui-start  hermes-kanban-webui-stop
static/: api.js  app.js  board.js  dependency-lines.js  design-tokens.css  dragdrop.js  drawer.js  forms.js  i18n.js  index.html  markdown.js  mobile.js  monitor.js  operations.js  state.js  style.css  theme.js  update.js
tests/: conftest.py  test_app_update.py  test_auth.py  test_board_endpoints.py  test_cli_parity_matrix.py  test_health.py  test_operations.py  test_running_monitor.py  test_static_smoke.py  test_task_lifecycle.py
